[project]
name = "sync-tasks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.7",
    "google-api-python-client>=2.189.0",
    "google-auth-oauthlib>=1.2.4",
    "notion-client>=2.7.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.40.0",
]
